[package]
name = "off64"
version = "0.4.0"
edition = "2021"
description = "Read from and write to byte slices with u64 offsets"
license = "Apache-2.0"
homepage = "https://github.com/wilsonzlin/off64"
repository = "https://github.com/wilsonzlin/off64.git"
authors = ["Wilson Lin <code@wilsonl.in>"]

[features]
default = ["chrono"]
chrono = ["dep:chrono"]

[dependencies]
async-trait = "0.1.68"
chrono = { version = "0.4", optional = true }
num = "0.4.0"
